--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-psycopg2
-requests==2.12.4
-chardet==2.3.0
 aiodns==1.1.1
 aiohttp==1.3.3
+chardet==2.3.0
+click~=6.7
+psycopg2~=2.7
+requests==2.12.4
+
 # if using jupyter notebooks
 #jupyter==1.0.0
 #notebook==4.3.1
