--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,21 @@
 [aliases]
 test=pytest
+
+[flake8]
+ignore =
+  ; __future__ import "division" missing, enforced in py3.0
+  FI10,
+  ; __future__ import "absolute_import" missing, enforced in py3.0
+  FI11,
+  ; __future__ import "with_statement" missing, enforced in py2.6
+  FI12,
+  ; __future__ import "print_function" missing, enforced in py3.0
+  FI13,
+  ; __future__ import "unicode_literals" missing, enforced in py3.0
+  FI14,
+  ; __future__ import "generator_stop" missing, enforced in py3.7
+  ; FI15,
+  ; __future__ import "nested_scopes" missing, enforced in py2.2
+  FI16,
+  ; __future__ import "generators" missing, enforced in py2.3
+  FI17,
