--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 test=pytest
 
 [flake8]
+application-import-names = ttc_api_scraper
+application-package-names = ttc_api_scraper
 ignore =
   ; __future__ import "division" missing, enforced in py3.0
   FI10,
@@ -19,4 +21,7 @@ ignore =
   FI16,
   ; __future__ import "generators" missing, enforced in py2.3
   FI17,
+  ; __future__ import "generator_stop" present, enforced in py3.7
+  FI55,
+import-order-style = pycharm
 max-line-length=159
