add coverage reporting

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
 [pytest]
 addopts =
-    -vv
+    --cov=ttc_api_scraper
+    --cov=ttc_api_scraper.py
+    --cov=cronic.py
+    --cov-report=html
     --showlocals
+    -vv
 testpaths = tests
