--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,56 @@ ignore =
   D104,
   ; Missing docstring in __init__
   D107,
+  ; No blank lines allowed after function docstring
+  D202,
+  ; 1 blank line required between summary line and description
+  D205,
+  ; Use """triple double quotes"""
+  D300,
+  ; First line should end with a period
+  D400,
   ; Missing blank line after last section
   D413,
+  ; indentation contains mixed spaces and tabs
+  E101,
+  ; closing bracket does not match visual indentation
+  E124,
+  ; continuation line over-indented for visual indent
+  E127,
+  ; continuation line under-indented for visual indent
+  E128,
+  ; whitespace after '('
+  E201,
+  ; whitespace before ')'
+  E202,
+  ; whitespace before ':'
+  E203,
+  ; multiple spaces after operator
+  E222,
+  ; missing whitespace around operator
+  E225,
+  ; missing whitespace around arithmetic operator
+  E226,
+  ; missing whitespace after ','
+  E231,
+  ; unexpected spaces around keyword / parameter equals
+  E251,
+  ; at least two spaces before inline comment
+  E261,
+  ; inline comment should start with '# '
+  E262,
+  ; block comment should start with '# '
+  E265,
+  ; expected 2 blank lines, found 1
+  E302,
+  ; too many blank lines (2)
+  E303,
+  ; expected 2 blank lines after class or function definition, found 1
+  E305,
+  ; multiple statements on one line (colon)
+  E701,
+  ; 'sys' imported but unused
+  F401,
   ; __future__ import "division" missing, enforced in py3.0
   FI10,
   ; __future__ import "absolute_import" missing, enforced in py3.0
