ignore more linting

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,12 +78,28 @@ ignore =
   ; __future__ import "unicode_literals" missing, enforced in py3.0
   FI14,
   ; __future__ import "generator_stop" missing, enforced in py3.7
-  ; FI15,
+  FI15,
   ; __future__ import "nested_scopes" missing, enforced in py2.2
   FI16,
   ; __future__ import "generators" missing, enforced in py2.3
   FI17,
   ; __future__ import "generator_stop" present, enforced in py3.7
   FI55,
+  ; Import statements are in the wrong order. 'import subprocess' should be before 'from time import sleep'
+  I100,
+  ; Additional newline in a group of imports. 'import aiohttp' is identified as Third Party and 'from psycopg2 import connect, sql' is identified as Third Party.
+  I202,
+  ; function name 'get_API_response' should be lowercase
+  N802,
+  ; variable 'ntasData' in function should be lowercase
+  N806,
+  ; indentation contains tabs
+  W191,
+  ; trailing whitespace
+  W291,
+  ; no newline at end of file
+  W292,
+  ; blank line contains whitespace
+  W293,
 import-order-style = pycharm
 max-line-length=159
